typescript/checker/tests/conformance/parser/ecmascript5/RegressionTests/parser509630.ts.stderr
error: Unexpected token Some(RBrace)
 --> $DIR/tests/conformance/parser/ecmascript5/RegressionTests/parser509630.ts:3:1
  |
3 | }
  | ^

